[gd_scene load_steps=4 format=3 uid="uid://bej18eibenek5"]

[ext_resource type="Script" path="res://source/scenes/ui/menus/death_screen.gd" id="1_isb2r"]
[ext_resource type="Texture2D" uid="uid://buqfa1uttqsj3" path="res://assets/sprites/floor-perspective.png" id="2_cb8j7"]
[ext_resource type="Theme" uid="uid://cn762radik7xw" path="res://assets/themes/default.tres" id="2_rymfl"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_isb2r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(512, 544)
scale = Vector2(1, 1.0625)
texture = ExtResource("2_cb8j7")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(1536, 544)
scale = Vector2(1, 1.0625)
texture = ExtResource("2_cb8j7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333333
anchor_top = 0.282407
anchor_right = 0.666667
anchor_bottom = 0.717593
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="DeathText" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_rymfl")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]You party has fallen and the realm has been destroyed. Will you try again or leave the world as a crumbling ruin?"
fit_content = true
scroll_active = false

[node name="Container" type="Container" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_rymfl")
text = "Retry"
flat = true

[node name="Container2" type="Container" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GiveUp" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_rymfl")
text = "Give up"
flat = true

[node name="Container3" type="Container" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HintText" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_rymfl")

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/GiveUp" to="." method="_on_give_up_pressed"]
